# etam

./: .gitignore  CMakeLists.txt  README.md
src/: Dataset.cpp  Dataset.h  EtamNetwork.cpp  EtamNetwork.h  Hyperplane.cpp  Hyperplane.h  Image.cpp  Image.h  Neuron.cpp  Neuron.h  Pattern.cpp  Pattern.h  constants.h  main.cpp  readers.cpp  readers.h  utils.cpp  utils.h
